--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -20,7 +20,4 @@ jobs:
         run: FOUNDRY_PROFILE=default forge build --skip test
       
       - name: Run tests RMM01Portfolio
-        run: FOUNDRY_PROFILE=default forge test --gas-report --match-contract TestRMM01Portfolio -vvv
-
-      - name: Run tests RMM02Portfolio
-        run: FOUNDRY_PROFILE=default forge test --match-contract TestRMM02Portfolio
+        run: FOUNDRY_PROFILE=default forge test --gas-report --match-contract TestRMM01 -vvv
