--- a/.github/workflows/optimized.yaml
+++ b/.github/workflows/optimized.yaml
@@ -20,10 +20,7 @@ jobs:
         run: FOUNDRY_PROFILE=optimized forge build --sizes --skip test
       
       - name: Run tests RMM01Portfolio
-        run: FOUNDRY_PROFILE=optimized forge test --match-contract TestRMM01Portfolio
-
-      - name: Run tests RMM02Portfolio
-        run: FOUNDRY_PROFILE=optimized forge test --match-contract TestRMM02Portfolio
+        run: FOUNDRY_PROFILE=optimized forge test --match-contract TestRMM01
 
       - name: Run invariant tests
         run: FOUNDRY_PROFILE=optimized forge test --gas-report --match-contract TestRMM01PortfolioInvariants -vvv
