--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -20,4 +20,4 @@ jobs:
         run: FOUNDRY_PROFILE=default forge build --skip test
       
       - name: Run tests RMM01Portfolio
-        run: FOUNDRY_PROFILE=default forge test --gas-report --match-contract TestRMM01 -vvv
+        run: FOUNDRY_PROFILE=default forge test --gas-report -vvv
