build: add Open Zeppelin remapping

--- a/foundry.toml
+++ b/foundry.toml
@@ -6,6 +6,7 @@ remappings = [
   'forge-std/=lib/forge-std/src/',
   'solmate/=lib/solmate/src/',
   'solstat/=lib/solstat/src/',
+  'openzeppelin-contracts/=lib/openzeppelin-contracts/contracts/',
 ] 
 solc = '0.8.19' 
 src = 'contracts' 
