--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -19,5 +19,5 @@ jobs:
       - name: Run build
         run: FOUNDRY_PROFILE=default forge build --skip test
       
-      - name: Run tests RMM01Portfolio
+      - name: Run tests
         run: FOUNDRY_PROFILE=default forge test --gas-report -vvv
